build/tmp/compileFrcUserProgramDebugExecutableFrcUserProgramCpp/output.txt
See file:///D:/Users/Conno/Desktop/Code/2020-InfiniteRecharge/build/tmp/compileFrcUserProgramDebugExecutableFrcUserProgramCpp/output.txt for all output for compileFrcUserProgramDebugExecutableFrcUserProgramCpp.
compiling ControlMap.cpp successful.

compiling BeltIntake.cpp successful.

compiling DriveAuto.cpp successful.

compiling ControlPannel.cpp successful.

compiling TurretBackend.cpp successful.

compiling Climber.cpp successful.

compiling DriveSystem.cpp successful.

compiling Robot.cpp successful.

compiling BinaryEncoderMotor.cpp successful.

compiling Turret.cpp failed.
D:\Users\Conno\Desktop\Code\2020-InfiniteRecharge\4788\src\main\cpp\Turret.cpp: In member function 'void Turret::TeleopOnUpdate(double)':
D:\Users\Conno\Desktop\Code\2020-InfiniteRecharge\4788\src\main\cpp\Turret.cpp:125:7: error: '_TurretDisable' was not declared in this scope
  if (!_TurretDisable) {
       ^~~~~~~~~~~~~~
D:\Users\Conno\Desktop\Code\2020-InfiniteRecharge\4788\src\main\cpp\Turret.cpp:125:7: note: suggested alternative: '_TurretDissable'
  if (!_TurretDisable) {
       ^~~~~~~~~~~~~~
       _TurretDissable

compiling BinaryLimitMotor.cpp successful.

compiling wayfinder.cpp successful.

compiling Compressor.cpp successful.

compiling BinaryServo.cpp successful.

compiling Filter.cpp successful.

compiling Controllers.cpp successful.

compiling Inputs.cpp successful.

compiling PIDController.cpp successful.

compiling DoubleSolenoid.cpp successful.

compiling SmartController.cpp successful.

compiling PneumaticIntake.cpp successful.

compiling VoltageController.cpp successful.

compiling WheeledIntake.cpp successful.

compiling MotionProfiling.cpp successful.

compiling MotorFilters.cpp successful.

compiling Files.cpp successful.

compiling RobotStartup.cpp successful.

compiling Encoder.cpp successful.

compiling DeployableDevice.cpp successful.

compiling Elevator.cpp successful.

compiling EncoderSwitch.cpp successful.

compiling Drivetrain.cpp successful.

compiling MPStrategy.cpp successful.

compiling LimitSwitch.cpp successful.

compiling LoopSystem.cpp successful.

compiling PressureSensor.cpp successful.

compiling Toggle.cpp successful.

Finished compileFrcUserProgramDebugExecutableFrcUserProgramCpp, see full log file:///D:/Users/Conno/Desktop/Code/2020-InfiniteRecharge/build/tmp/compileFrcUserProgramDebugExecutableFrcUserProgramCpp/output.txt.
